--- a/db/configurations/goodmoves/partials/search-form.hbs
+++ b/db/configurations/goodmoves/partials/search-form.hbs
@@ -115,9 +115,11 @@
       {{> term_checkbox key=key field="role_status" selected=../request.params.query.role_status}}
       {{/each ~}}
 
-      <button class="mdc-button mdc-button--raised mdc-button--fullwidth h-margin v-margin" type="submit">
-        Search jobs
-      </button>
+      <div class="h-margin v-margin">
+        <button class="mdc-button mdc-button--raised mdc-button--fullwidth" type="submit">
+          Search jobs
+        </button>
+      </div>
     </form>
   </div>
 </aside>
