Hooked up search form history, map data on first load, and other search form elements

--- a/db/configurations/goodmoves/templates/jobs/search-foot.hbs
+++ b/db/configurations/goodmoves/templates/jobs/search-foot.hbs
@@ -19,4 +19,14 @@ var terms = {
     {{/each ~}}
   ]
 };
+var mapResults = [
+    {{#each data.search_data.map_results.hits.hits}}
+    {
+      "Id": {{{stringify _id}}},
+      "geo_vacancy_coords": {{{stringify _source.geo_vacancy_coords}}},
+      "title": {{{stringify _source.title}}},
+      "info_window": {{{stringify (component "vacancy_map" _source)}}}
+    }{{#unless @last}},{{/unless}}
+    {{/each}}
+];
 </script>
