--- a/db/configurations/goodmoves/partials/search-form.hbs
+++ b/db/configurations/goodmoves/partials/search-form.hbs
@@ -36,7 +36,7 @@
       <div class="h-padding">
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
           <span class="far fa-search mdc-text-field__icon" tabindex="0" role="button"></span>
-          <input type="text" id="{{instance_id}}-keywords" name="keywords" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.q}}">
+          <input type="text" id="{{instance_id}}-keywords" name="keywords" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.keywords}}">
           <label class="mdc-floating-label mdc-floating-label--float-above" for="keywords">
             Keywords
           </label>
@@ -50,7 +50,7 @@
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-3-phone">
               <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
                 <span class="far fa-map-marker-alt mdc-text-field__icon" tabindex="0" role="button"></span>
-                <input type="text" id="{{instance_id}}-location" name="location" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.q}}" placeholder="">
+                <input type="text" id="{{instance_id}}-location" name="location" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.location}}" placeholder="">
                 <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-location">
                   Location
                 </label>
@@ -60,14 +60,16 @@
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone">
               <div class="mdc-select mdc-select--box">
                 <div class="mdc-select" data-mdc-auto-init="MDCSelect">
-                  <select class="mdc-select__native-control" id="distance">
-                    <option value="8046.72" selected>5 miles</option>
-                    <option value="16093.44">10 miles</option>
-                    <option value="40233.6">25 miles</option>
-                    <option value="80467.2">50 miles</option>
+                  <select class="mdc-select__native-control" id="{{instance_id}}-distance" name="distance">
+                    <option value="8046.72" {{#compare request.params.query.distance "8046.72"}}selected{{/compare}}>5 miles</option>
+                    <option value="16093.44" {{#compare request.params.query.distance "16093.44"}}selected{{/compare}}>10 miles</option>
+                    <option value="40233.6" {{#compare request.params.query.distance "40233.6"}}selected{{/compare}}>25 miles</option>
+                    <option value="80467.2" {{#compare request.params.query.distance "80467.2"}}selected{{/compare}}>50 miles</option>
                     <option value="any">no limit</option>
                   </select>
-                  <label class="mdc-floating-label mdc-floating-label--float-above" for="distance">Distance</label>
+                  <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-distance">
+                    Distance
+                  </label>
                 </div>
               </div>
             </div>
