--- a/db/configurations/goodmoves/partials/currently-recruiting.hbs
+++ b/db/configurations/goodmoves/partials/currently-recruiting.hbs
@@ -4,13 +4,11 @@
   </div>
   <div class="mdc-layout-grid v-margin-full">
     <div class="mdc-layout-grid__inner">
-      {{#each data.organisations.currently_recruiting.aggregations.active.job_count.buckets ~}}
+      {{#each data.organisations.currently_recruiting.hits.hits ~}}
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone">
-        {{#with top_hits.hits.hits.[0]._source.organisation}}
-        <a href="/organisation/{{slug}}" title="{{name}}" class="organisation-logo">
-          <img src="{{logo_url}}" />
+        <a href="/organisation/{{_source.slug}}" title="{{_source.name}}" class="organisation-logo">
+          <img src="{{_source.logo_url}}" />
         </a>
-        {{/with}}
       </div>
       {{/each ~}}
     </div>
