--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -5,7 +5,7 @@ $mdc-theme-primary-dark: #1e3b12;
 $mdc-theme-old: #58a934;
 
 $mdc-theme-secondary: #424242;
-$mdc-theme-secondary-light: #f7f7f7;
+$mdc-theme-secondary-light: #f5f5f5;
 $mdc-theme-secondary-dark: darken($mdc-theme-secondary, 10%);
 
 $mdc-theme-background: white;
@@ -26,6 +26,9 @@ $mobile-landscape-breakpoint: 959px;
 
 body {
   background-color: $mdc-theme-secondary-dark;
+}
+.mdc-theme--background {
+  background-color: $mdc-theme-secondary-light !important;
 }
 .mdc-toolbar-fixed-adjust {
   margin: 0;
@@ -209,7 +212,7 @@ footer h3,
   margin-bottom: 0;
   padding-bottom: $unit;
   border-right: none;
-  background-color: $mdc-theme-secondary-light !important;
+  background-color: #fff !important;
 }
 .container-content {
   align-items: flex-end;
@@ -315,7 +318,7 @@ a {
 
 .search-info {
   margin: $unit*1.5 0 $unit;
-  background: $mdc-theme-secondary-light;
+  background: white;
   color: $mdc-theme-secondary;
   padding: $unit/3 $unit/2;
   box-sizing: border-box;
@@ -488,6 +491,9 @@ hr {
 .mdc-drawer__content-heading {
   margin: 0;
   padding: $unit;
+  .far.pull-right {
+    line-height: $unit*1.7;
+  }
 }
 
 .drawer-container {
@@ -596,7 +602,6 @@ hr {
 .container-content {
   position: relative;
   max-width: 1100px;
-  background-color: #fdfdfd;
   .container-fluid {
     position: relative;
   }
@@ -671,6 +676,8 @@ body {
   .mdc-card__info--organisation-row,
   .mdc-card__info--vacancy-row {
     display: flex;
+  }
+  .mdc-card__info--vacancy-row {
     padding: $unit/2;
   }
   .mdc-card__info--organisation,
@@ -724,12 +731,15 @@ body {
       padding: $unit/2 0;
     }
   }
+  .mdc-card__info--organisation {
+    padding: 0;
+  }
   .mdc-card__media--organisation {
     max-width: 120px;
     height: auto;
     display: flex;
     align-items: center;
-    margin: $unit/2;
+    margin: $unit/2 0 0 $unit;
     padding: 0;
     img {
       width: 100%;
@@ -743,6 +753,7 @@ body {
   }
 }
 .mdc-card.full {
+  background-color: transparent;
   margin-top: $unit;
   .mdc-card__info--vacancy-row {
     padding: 0 0 $unit;
@@ -752,6 +763,23 @@ body {
     .mdc-card__media {
       margin: 0;
     }
+  }
+  .mdc-card__info--vacancy-row,
+  .mdc-card__info--organisation-row {
+    .mdc-card__media--organisation {
+      align-items: flex-start;
+      mix-blend-mode: multiply;
+    }
+  }
+  .mdc-card__info--organisation-row {
+    .mdc-card__media--organisation {
+      max-width: 200px;
+    }
+  }
+}
+.goodmoves-organisation {
+  .mdc-card.full {
+    background-color: transparent;
   }
 }
 
