--- a/db/configurations/goodmoves/partials/currently-recruiting.hbs
+++ b/db/configurations/goodmoves/partials/currently-recruiting.hbs
@@ -4,7 +4,7 @@
   </div>
   <div class="mdc-layout-grid v-margin-full">
     <div class="mdc-layout-grid__inner">
-      {{#each data.organisations.currently_recruiting.hits.hits ~}}
+      {{#each data.supplimentaryResponses.currently_recruiting.hits.hits ~}}
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone">
         <a href="/organisation/{{_source.slug}}" class="organisation-logo">
           <img src="{{_source.logo_url}}" alt="{{_source.title}}" />
