Mock up banner ad

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -217,6 +217,13 @@ footer h3,
 .container-content {
   align-items: flex-end;
 }
+.goodmoves-job-search {
+  .head {
+    .mdc-select {
+      margin-top: 0;
+    }
+  }
+}
 // .container-content-home {
 //   .container-fluid {
 //     .mdc-layout-grid__cell {
