improved banner ads mockup

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -224,6 +224,21 @@ footer h3,
     }
   }
 }
+
+.x-items {
+  margin-top: $unit*1.5;
+  display: flex;
+  .x-item {
+    line-height: 0;
+    align-items: flex-start;
+  }
+  .x-item-side {
+    display: inline-flex;
+    align-items: center;
+    width: 100%;
+    justify-content: center;
+  }
+}
 // .container-content-home {
 //   .container-fluid {
 //     .mdc-layout-grid__cell {
