--- a/db/configurations/goodmoves/templates/pages/home.hbs
+++ b/db/configurations/goodmoves/templates/pages/home.hbs
@@ -149,7 +149,7 @@
         <div class="mdc-typography--headline5 v-margin-full">
           Top jobs
         </div>
-        {{#each data.jobs.top.hits.hits ~}}
+        {{#each data.supplimentaryResponses.top.hits.hits ~}}
         {{> vacancy_search_result _source}}
         {{/each ~}}
       </div>
@@ -157,7 +157,7 @@
         <div class="mdc-typography--headline5 v-margin-full">
           Latest jobs
         </div>
-        {{#each data.jobs.latest.hits.hits ~}}
+        {{#each data.primaryResponse.hits.hits ~}}
         {{> vacancy_search_result _source}}
         {{/each ~}}
       </div>
