--- a/db/configurations/goodmoves/partials/tfn-latest.hbs
+++ b/db/configurations/goodmoves/partials/tfn-latest.hbs
@@ -1,6 +1,6 @@
-<div class="mdc-layout-grid">
+<div class="mdc-layout-grid tfn-latest">
   <div class="mdc-layout-grid__inner">
-    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full tfn-latest">
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full">
       <div class="mdc-typography--headline5 v-margin-full">
         Latest TFN news
       </div>
