update to currently recruiting logic

--- a/db/configurations/goodmoves/partials/currently-recruiting.hbs
+++ b/db/configurations/goodmoves/partials/currently-recruiting.hbs
@@ -6,8 +6,8 @@
     <div class="mdc-layout-grid__inner">
       {{#each data.supplimentaryResponses.currently_recruiting.hits.hits ~}}
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone">
-        <a href="/organisation/{{_source.organisation.slug}}" class="organisation-logo">
-          <img src="{{_source.organisation.logo_url}}" alt="{{_source.organisation.name}}" />
+        <a href="/organisation/{{_source.slug}}" class="organisation-logo">
+          <img src="{{_source.logo_url}}" alt="{{_source.title}}" />
         </a>
       </div>
       {{/each ~}}
