--- a/db/configurations/goodmoves/templates/pages/home-foot.hbs
+++ b/db/configurations/goodmoves/templates/pages/home-foot.hbs
@@ -4,17 +4,17 @@
 <script>
 var terms = {
   sectors: [
-    {{#each data.terms.types.aggregations.sectors.buckets ~}}
+    {{#each data.supplimentaryResponses.types.aggregations.sectors.buckets ~}}
     { field: 'sectors', term: {{{stringify key}}} },
     {{/each ~}}
   ],
   roles: [
-    {{#each data.terms.types.aggregations.roles.buckets ~}}
+    {{#each data.supplimentaryResponses.types.aggregations.roles.buckets ~}}
     { field: 'roles', term: {{{stringify key}}} },
     {{/each ~}}
   ],
   role_status: [
-    {{#each data.terms.types.aggregations.role_status.buckets ~}}
+    {{#each data.supplimentaryResponses.types.aggregations.role_status.buckets ~}}
     { field: 'role_status', term: {{{stringify key}}} },
     {{/each ~}}
   ]
