--- a/db/configurations/goodmoves/partials/currently-recruiting.hbs
+++ b/db/configurations/goodmoves/partials/currently-recruiting.hbs
@@ -1,6 +1,9 @@
 <section class="currently-recruiting">
   <div class="mdc-typography--headline5 v-margin-full">
-    Currently recruiting &ensp; <span class="mdc-typography--caption"><a href="/organisations">See all</a></span>
+    Currently recruiting &ensp;
+    <span class="mdc-typography--caption">
+      <a href="/organisations">See all</a>
+    </span>
   </div>
   <div class="mdc-layout-grid v-margin-full">
     <div class="mdc-layout-grid__inner">
