--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -976,11 +976,11 @@ body {
     justify-content: center;
     align-items: center;
     img {
-      -webkit-transition: opacity .1s ease-in-out;
-      -moz-transition: opacity .1s ease-in-out;
-      -ms-transition: opacity .1s ease-in-out;
-      -o-transition: opacity .1s ease-in-out;
-      transition: opacity .1s ease-in-out;
+      // -webkit-transition: all .1s ease-in-out;
+      // -moz-transition: all .1s ease-in-out;
+      // -ms-transition: all .1s ease-in-out;
+      // -o-transition: all .1s ease-in-out;
+      // transition: all .1s ease-in-out;
       mix-blend-mode: multiply;
       filter: grayscale(100%);
       opacity: .8;
@@ -1013,10 +1013,16 @@ footer {
   background-image: linear-gradient(
   -120deg,
   $mdc-theme-secondary-dark,
-  $mdc-theme-secondary-dark $unit*4,
-  $mdc-theme-old $unit*4.05,
-  $mdc-theme-old $unit*5,
-  $mdc-theme-secondary $unit*5.05,
+  $mdc-theme-secondary-dark $unit*2,
+  $mdc-theme-primary $unit*2.05,
+  $mdc-theme-primary $unit*2.5,
+  $mdc-theme-old $unit*2.55,
+  $mdc-theme-old $unit*3,
+  $mdc-theme-primary-light $unit*3.05,
+  $mdc-theme-primary-light $unit*3.5,
+  white $unit*3.55,
+  white $unit*4,
+  $mdc-theme-secondary $unit*4.05,
   $mdc-theme-secondary
   );
   .footer-main,
