Added contact info footer to CU pages

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -429,9 +429,9 @@ a {
   box-shadow: none;
   .panel-heading {
     background: $mdc-theme-error;
-    margin: .5rem 0 1rem;
+    margin: $unit/2 0 $unit;
     color: white;
-    padding: .5rem;
+    padding: $unit/2;
     font-weight: 600;
   }
   .mdc-card__info--organisation-title {
@@ -725,19 +725,19 @@ body {
         margin-left: 0;
         margin-right: .2rem;
         display: inline-block;
-        padding: .22222222rem .5rem;
+        padding: .22222222rem $unit/2;
         font-weight: 700;
         line-height: 1;
         text-align: center;
         white-space: nowrap;
         vertical-align: baseline;
         background-color: $mdc-theme-secondary !important;
-        border-radius: 1rem;
+        border-radius: $unit;
         position: relative;
         top: -2px;
         left: 0;
         font-size: 1rem;
-        height: 1.5rem;
+        height: $unit*1.5;
         box-sizing: border-box;
         color: white;
       }
