First attempt at "similar jobs"

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -219,6 +219,10 @@ footer h3,
 .container-content {
   align-items: flex-end;
 }
+.goodmoves-job,
+.goodmoves-related-jobs {
+  margin-bottom: $unit*2.5;
+}
 .goodmoves-job-search {
   .head {
     .mdc-select {
@@ -465,6 +469,7 @@ a {
     }
   }
   .vacancy-info-container {
+    background-color: white;
     box-shadow: 0px 6px 6px -3px rgba(0, 0, 0, 0.2), 0px 10px 14px 1px rgba(0, 0, 0, 0.14), 0px 4px 18px 3px rgba(0, 0, 0, 0.12);
   }
   .mdc-card--full-content {
@@ -495,7 +500,7 @@ a {
   float: left;
 }
 .top-jobs .top-job,
-.mdc-card.list .mdc-card__info--vacancy-organisation {
+.goodmoves-organisation .mdc-card.list .mdc-card__info--vacancy-organisation {
   display: none !important;
 }
 
