--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -10,6 +10,8 @@ $mdc-theme-secondary-dark: darken($mdc-theme-secondary, 10%);
 
 $mdc-theme-error: #a93f34;
 
+$mdc-theme-tfn: #3b9db1;
+
 $mdc-theme-background: white;
 
 $unit: 1rem;
@@ -41,8 +43,8 @@ header {
   .container-fluid {
     padding: 0;
     .mdc-top-app-bar__section--align-start {
-      background-image: linear-gradient(60deg, $mdc-theme-primary, $mdc-theme-primary 320px, $mdc-theme-old 321px, $mdc-theme-old);
-      min-width: 321px;
+      background-image: linear-gradient(60deg, $mdc-theme-primary, $mdc-theme-primary 300px, $mdc-theme-old 301px, $mdc-theme-old);
+      min-width: 320px;
     }
     .mdc-top-app-bar__section--align-end {
       padding-right: $unit/2;
@@ -266,6 +268,9 @@ a {
 }
 a:hover {
   text-decoration: underline;
+}
+.tfn a {
+  color: $mdc-theme-tfn;
 }
 
 .mdc-chip {
