trying to get panels to work

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -480,6 +480,12 @@ a {
       background-color: $mdc-theme-primary-light;
     }
   }
+  .panel {
+    display: none;
+  }
+  .panel.panel--active {
+    display: block;
+  }
   .vacancy-info-container {
     background-color: white;
     box-shadow: 0px 6px 6px -3px rgba(0, 0, 0, 0.2), 0px 10px 14px 1px rgba(0, 0, 0, 0.14), 0px 4px 18px 3px rgba(0, 0, 0, 0.12);
