--- a/db/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/full.hbs
@@ -3,23 +3,23 @@
   <hr class="mdc-list-divider" />
   <div class="vacancy-info-container">
     <div id="vacancy-tab-bar" class="mdc-tab-bar" data-mdc-auto-init="MDCTabBar" role="tablist">
-      <a class="mdc-tab mdc-tab--active" role="tab" aria-controls="information" href="">
+      <a class="mdc-tab mdc-tab--active" role="tab" aria-controls="panel-1">
         <span class="far fa-list-ul fa-fw" aria-hidden="true"></span>
         Information
       </a>
-      <a class="mdc-tab" role="tab" aria-controls="location" href="">
+      <a class="mdc-tab" role="tab" aria-controls="panel-2">
         <span class="far fa-map-marker-alt fa-fw" aria-hidden="true"></span>
         Location
       </a>
-      <a class="mdc-tab" role="tab" aria-controls="apply" href="">
+      <a class="mdc-tab" role="tab" aria-controls="panel-3">
         <span class="far fa-handshake fa-fw" aria-hidden="true"></span>
         Apply
       </a>
       <span class="mdc-tab-bar__indicator"></span>
     </div>
     <hr class="mdc-list-divider" />
-    <div class="panels">
-      <div class="panel active mdc-card--full-content" id="information" role="tabpanel" aria-hidden="false">
+    <div class="panels" for="vacancy-tab-bar">
+      <div class="panel panel--active mdc-card--full-content" role="tabpanel" aria-hidden="false">
         <div class="key-info-extra">
           <ul class="fa-ul">
             {{#if salary_info ~}}
@@ -66,7 +66,7 @@
           {{{rendered.goodmoves_sponsor_logos}}}
         </div>
       </div>
-      <div class="panel mdc-card--full-content mdc-typography--body1" id="location" role="tabpanel" aria-hidden="true">
+      <div class="panel mdc-card--full-content mdc-typography--body1" role="tabpanel" aria-hidden="true">
         <div class="detailed-info mdc-typography--body1">
           {{#if geo_vacancy_coords}}
           {{#each geo_vacancy_coords}}
@@ -79,7 +79,7 @@
           {{/if}}
         </div>
       </div>
-      <div class="panel mdc-card--full-content mdc-typography--body1" id="apply" role="tabpanel" aria-hidden="true">
+      <div class="panel mdc-card--full-content mdc-typography--body1" role="tabpanel" aria-hidden="true">
         <!-- <div class="key-info-extra">
           <ul class="fa-ul">
             {{#if closing_date ~}}
@@ -102,3 +102,26 @@
     </div>
   </div>
 </div>
+
+<script type="text/javascript">
+  var tabs = new mdc.tabs.MDCTabBar(document.querySelector("#vacancy-tab-bar"));
+  var panels = document.querySelector(".panels");
+  tabs.preventDefaultOnClick = true;
+  function updatePanel(index) {
+    var activePanel = panels.querySelector(".panel.panel--active");
+    if (activePanel) {
+      activePanel.classList.remove("panel--active");
+    }
+    var newActivePanel = panels.querySelector(
+      ".panel:nth-child(" + (index + 1) + ")"
+    );
+    if (newActivePanel) {
+      newActivePanel.classList.add("panel--active");
+    }
+  }
+  tabs.listen("MDCTabBar:change", function(t) {
+    var tabs = t.detail;
+    var nthChildIndex = tabs.activeTabIndex;
+    updatePanel(nthChildIndex);
+  });
+</script>
