Misc tidying up and refactoring to allow org search

--- a/db/configurations/goodmoves/templates/jobs/job.hbs
+++ b/db/configurations/goodmoves/templates/jobs/job.hbs
@@ -1,4 +1,4 @@
-{{> search_form this instance_id="perm"}}
+{{> vacancy_search_form this instance_id="perm"}}
 
 <div class="container-content">
   <div class="goodmoves-job">
