--- a/db/configurations/goodmoves/templates/jobs/search.hbs
+++ b/db/configurations/goodmoves/templates/jobs/search.hbs
@@ -1,7 +1,7 @@
 <div id="map-full" class="hidden"></div>
 
-{{> search_form this instance_id="perm"}}
+{{> vacancy_search_form this instance_id="perm"}}
 
 <div id="detailed-results-container" class="container-content goodmoves-job-search">
-  {{> search_results this}}
+  {{> vacancy_search_results this}}
 </div>
