--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -477,7 +477,7 @@ a {
       background-color: $mdc-theme-primary-dark;
     }
     .mdc-tab-bar__indicator {
-      background-color: $mdc-theme-primary-light;
+      background-color: white;
     }
   }
   .panel {
