Downloads list styling

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -464,6 +464,9 @@ a {
     cursor: default;
     text-decoration: none;
   }
+  .text-field-container.user-notes {
+    width: 95%;
+  }
   #vacancy-tab-bar {
     width: 100%;
     background-color: $mdc-theme-primary;
@@ -1004,7 +1007,7 @@ body {
   .organisation-logo {
     border-radius: 5px;
     position: relative;
-  	width: 100%;
+    width: 100%;
     background-color: transparent;
     display: flex;
     justify-content: center;
