--- a/db/configurations/goodmoves/layouts/default.hbs
+++ b/db/configurations/goodmoves/layouts/default.hbs
@@ -158,7 +158,7 @@ if(location.host.indexOf('.local') > -1){
                 <!-- Logged in: -->
                 <button class="mdc-button" data-menu-target="#user-menu">
                   <span class="far fa-fw fa-user-circle"></span>
-                  User McUserface
+                  Richard Nisbet
                   <span class="far fa-fw fa-angle-down"></span>
                 </button>
                 <div class="mdc-menu" tabindex="-1" data-mdc-auto-init="MDCMenu" id="user-menu">
