Completed mockup for saved searches

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -227,6 +227,19 @@ footer h3,
     }
   }
 }
+.goodmoves-saved-searches {
+  .mdc-list {
+    background-color: white;
+    .saved-search-email-switch {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      label {
+        margin-left: $unit;
+      }
+    }
+  }
+}
 
 .x-items {
   margin-top: $unit*1.5;
