--- a/db/configurations/goodmoves/templates/jobs/saved-searches.hbs
+++ b/db/configurations/goodmoves/templates/jobs/saved-searches.hbs
@@ -5,64 +5,117 @@
     Saved searches
   </h1>
 
-  <ul class="mdc-list mdc-list--two-line mdc-list--avatar-list">
+  <ul class="mdc-list mdc-list--two-line mdc-list--avatar-list mdc-elevation--z3">
     <li class="mdc-list-item mdc-ripple-upgraded">
       <span class="mdc-list-item__graphic far fa-search fa-2x" aria-hidden="true"></span>
       <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-10-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-3-phone">
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-3-phone saved-search">
             <span class="mdc-list-item__text">
               Manager
               <span class="mdc-list-item__secondary-text">
                 Glasgow
               </span>
-            </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone">
-              <div class="mdc-switch" data-mdc-auto-init="MDCSwitch">
-                <input type="checkbox" id="basic-switch" class="mdc-switch__native-control" role="switch">
-                <div class="mdc-switch__background">
-                  <div class="mdc-switch__knob"></div>
-                </div>
-              </div>
-              <label for="basic-switch">off/on</label>
             </span>
+          </div>
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
+            <div class="mdc-switch">
+              <input type="checkbox" id="email-switch" class="mdc-switch__native-control" role="switch" checked="checked">
+              <div class="mdc-switch__background">
+                <div class="mdc-switch__knob"></div>
+              </div>
+            </div>
+            <label for="email-switch">
+              <span class="far fa-envelope fa-2x"></span>
+            </label>
           </div>
         </div>
       </div>
-      <span class="mdc-list-item__meta far fa-trash-alt" aria-hidden="true"></span>
+      <span class="saved-search-remove mdc-list-item__meta far fa-trash-alt" aria-hidden="true"></span>
     </li>
     <li class="mdc-list-divider" role="separator"></li>
     <li class="mdc-list-item mdc-ripple-upgraded">
       <span class="mdc-list-item__graphic far fa-search fa-2x" aria-hidden="true"></span>
-      <span class="mdc-list-item__text">
-        IT Manager
-        <span class="mdc-list-item__secondary-text">
-          Edinburgh, Glasgow
-        </span>
-      </span>
-      <span class="mdc-list-item__meta far fa-trash-alt" aria-hidden="true"></span>
+      <div class="mdc-layout-grid">
+        <div class="mdc-layout-grid__inner">
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-3-phone saved-search">
+            <span class="mdc-list-item__text">
+              IT Manager
+              <span class="mdc-list-item__secondary-text">
+                Edinburgh, Glasgow
+              </span>
+            </span>
+          </div>
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
+            <div class="mdc-switch">
+              <input type="checkbox" id="email-switch2" class="mdc-switch__native-control" role="switch" checked="checked">
+              <div class="mdc-switch__background">
+                <div class="mdc-switch__knob"></div>
+              </div>
+            </div>
+            <label for="email-switch2">
+              <span class="far fa-envelope fa-2x"></span>
+            </label>
+          </div>
+        </div>
+      </div>
+      <span class="saved-search-remove mdc-list-item__meta far fa-trash-alt" aria-hidden="true"></span>
     </li>
     <li class="mdc-list-divider" role="separator"></li>
     <li class="mdc-list-item mdc-ripple-upgraded">
       <span class="mdc-list-item__graphic far fa-search fa-2x" aria-hidden="true"></span>
-      <span class="mdc-list-item__text">
-        Technician
-        <span class="mdc-list-item__secondary-text">
-          Glasgow, Falkirk
-        </span>
-      </span>
-      <span class="mdc-list-item__meta far fa-trash-alt" aria-hidden="true"></span>
+      <div class="mdc-layout-grid">
+        <div class="mdc-layout-grid__inner">
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-3-phone saved-search">
+            <span class="mdc-list-item__text">
+              (no keywords)
+              <span class="mdc-list-item__secondary-text">
+                Glasgow, Manager
+              </span>
+            </span>
+          </div>
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
+            <div class="mdc-switch">
+              <input type="checkbox" id="email-switch3" class="mdc-switch__native-control" role="switch">
+              <div class="mdc-switch__background">
+                <div class="mdc-switch__knob"></div>
+              </div>
+            </div>
+            <label for="email-switch3">
+              <span class="far fa-envelope fa-2x"></span>
+            </label>
+          </div>
+        </div>
+      </div>
+      <span class="saved-search-remove mdc-list-item__meta far fa-trash-alt" aria-hidden="true"></span>
     </li>
     <li class="mdc-list-divider" role="separator"></li>
     <li class="mdc-list-item mdc-ripple-upgraded">
       <span class="mdc-list-item__graphic far fa-search fa-2x" aria-hidden="true"></span>
-      <span class="mdc-list-item__text">
-        Trustee
-        <span class="mdc-list-item__secondary-text">
-          Edinburgh
-        </span>
-      </span>
-      <span class="mdc-list-item__meta far fa-trash-alt" aria-hidden="true"></span>
+      <div class="mdc-layout-grid">
+        <div class="mdc-layout-grid__inner">
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-3-phone saved-search">
+            <span class="mdc-list-item__text">
+              Trustee
+              <span class="mdc-list-item__secondary-text">
+                Edinburgh
+              </span>
+            </span>
+          </div>
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
+            <div class="mdc-switch">
+              <input type="checkbox" id="email-switch4" class="mdc-switch__native-control" role="switch" checked="checked">
+              <div class="mdc-switch__background">
+                <div class="mdc-switch__knob"></div>
+              </div>
+            </div>
+            <label for="email-switch4">
+              <span class="far fa-envelope fa-2x"></span>
+            </label>
+          </div>
+        </div>
+      </div>
+      <span class="saved-search-remove mdc-list-item__meta far fa-trash-alt" aria-hidden="true"></span>
     </li>
   </ul>
 </div>
